fix: release automation fix to avoid having the appcast in the repo (which requires more permissions and pollutes the code) and instead generate it on every release
- Updated build-and-distribute.yml to generate appcast XML from GitHub Releases instead of GitHub Pages.
- Removed pages.yml workflow as GitHub Pages is no longer used for appcast hosting.
- Modified README and documentation to reflect changes in appcast hosting and release process.
- Updated Info.plist to point to the new appcast URL on GitHub Releases.
- Added generate-appcast.js script for generating appcast XML from release data.
- Adjusted setup-sparkle.sh to remove GitHub Pages setup instructions and clarify new appcast hosting.

--- a/VTSApp/Info.plist
+++ b/VTSApp/Info.plist
@@ -21,7 +21,7 @@
     
     <!-- Sparkle auto-update configuration -->
     <key>SUFeedURL</key>
-    <string>https://j05u3.github.io/VTS/appcast.xml</string>
+    <string>https://github.com/j05u3/VTS/releases/latest/download/appcast.xml</string>
     <key>SUPublicEDKey</key>
     <string>SPARKLE_PUBLIC_KEY_PLACEHOLDER</string>
     <key>SUEnableAutomaticChecks</key>
